# maths-prompt

./: .gitignore  CLAUDE.md  README.md  dashboard.py  mcp.json  pyproject.toml  sandbox_settings.json
data/: test_problems.json
notebooks/: analysis.ipynb  explore.ipynb
src/maths_prompt/: config.py  dashboard.py  evaluator.py  generator.py  main.py  mcp_server.py  model.py  runner.py  scorer.py  test_eval.py
