[project]
name = "maths-prompt"
version = "0.1.0"
description = "Iterative prompt engineering to teach a base LLM maths"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm",
    "anthropic",
    "rich",
    "pydantic",
    "streamlit",
    "plotly",
    "typer",
]

[project.scripts]
maths-prompt = "maths_prompt.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maths_prompt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
]
